FLSAM ChangeLog

<Date in future> v 0.40
 * A "Weclome to SAM message", complete with health warning
 * Addition of NAMESPACE - required from R 2.14.0 onwards
 * Autoconfiguration in FLSAM.control() now has the option of taking a
   reasonable first guess at a configuration, or leaving configuration
   completely blank (see "default" argument). (Issue 11)
 * power.law.exps() accessor function added
 * Validity checks to ensure that the FLR data is configured 
   correctly (Issue 7)
 * Addition of FLSAMs plural class (Issue 14)
 * Addition of overloaded methods for merge, "+" and AIC that work for FLSAMs
 * Multiple objects can be supplied to lr.test() either as FLSAM objects, or
   as an FLSAMs object (Issue 10)
 * Addition of cheat sheet to the wiki (Issue 15)
 * Addition of Leave-one-out, leave-one-in functionality (Issue 16) 
 * Help files all round! (Issue 13) 
 * Added checks internally to sam.tpl to ensure correct reading of 
   data (Issue 22)
 * Incorporated new version of SUSAM diagnostics, with a smoother on the
   Tukey-Anscombe plot

2011-11-01 v 0.31
 * Implemented changes by Morten Vinther to account for year-ahead indices
 * Fixed problem with run.dir argument to FLSAM being wrongly named!

2011-10-27 v 0.30
 * Replaced ADMB template and executables. Previous versions used the ADMB tpl
   file called "ssass.tpl". This was a development version that dates from
   somewhere around about mid-2010 or so, when SAM was first setup for North
   Sea herring. SAM has recently been moved into a formal version control
   system (SVN) and the version used here, revision 4, therefore represents
   the newest vesion available.

2011-10-26 v 0.20-2
  * Added residual.diagnostics() function